--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "todoappreal",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.13.0"
+  }
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
