--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "todoappreal",
   "version": "0.0.0",
   "engines": {
-    "node": "10.13.0"
+    "node" : "~10.13.0",
+    "npm" : "~6.9.0"
   },
   "scripts": {
     "ng": "ng",
@@ -30,7 +31,10 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+	"express":"*",
+	"body-parser":"*",
+	"bcrypt": "^0.8.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -49,9 +53,5 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0"
-  },
-  "engines": {
-    "node" : "~10.13.0",
-    "npm" : "~6.9.0"
   }
 }
