--- a/package.json
+++ b/package.json
@@ -31,10 +31,7 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
-    "zone.js": "~0.8.26",
-	"express":"*",
-	"body-parser":"*",
-	"bcrypt": "^0.8.5"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
