--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "todoappreal",
   "version": "0.0.0",
   "engines": {
-    "node" : "~10.13.0",
-    "npm" : "~6.9.0"
+    "node": "~10.13.0",
+    "npm": "~6.9.0"
   },
   "scripts": {
     "ng": "ng",
@@ -28,6 +28,8 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "core-util-is": "^1.0.2",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "typescript": "~3.2.2",
